@@ -76,6 +76,7 @@ extern const char SlopeShadingType[];
 extern const char TerrainContours[];
 extern const char FinalGlideTerrain[];
 extern const char AutoWind[];
+extern const char ExternalWind[];
 extern const char AirspaceWarning[];
 extern const char AirspaceWarningDialog[];
 extern const char AirspaceBlackOutline[];
